--- a/CJCapaPresentacion/src/main/java/view/FrmAdministrarProductos.form
+++ b/CJCapaPresentacion/src/main/java/view/FrmAdministrarProductos.form
@@ -335,7 +335,7 @@
                             <Column editable="false" title="Tipo" type="java.lang.String"/>
                             <Column editable="false" title="Nombre" type="java.lang.String"/>
                             <Column editable="false" title="Precio" type="java.lang.Double"/>
-                            <Column editable="false" title="" type="java.lang.Object"/>
+                            <Column editable="true" title="" type="java.lang.Object"/>
                             <Column editable="true" title="" type="java.lang.Object"/>
                           </Table>
                         </Property>
